# aoc

./: .gitignore
2022/: pull.jl
2022/01/: sol.jl
2022/03/: sol.jl
2022/06/: sol.jl
2022/07/: sol.jl
2022/08/: sol.jl
2022/09/: sol.jl
2022/1/: sol.jl
2022/10/: sol.jl
2022/11/: sol.jl
2022/12/: sol.jl
2022/13/: sol.jl
2022/14/: sol.jl
2022/15/: sol.jl
2022/2/: sol.jl
2022/3/: sol.jl
2022/4/: sol.jl
2022/5/: sol.jl
2022/8/: sol.jl
2023/: Cargo.toml
2023/day01/: Cargo.toml
2023/day01/src/: main.rs
2023/day02/: Cargo.toml
2023/day03/: Cargo.toml
2023/day03/src/: main.rs
2023/day04/: Cargo.toml
2023/day04/src/: main.rs
2023/day05/: Cargo.toml
2023/day05/src/: main.rs
2023/day06/: Cargo.toml
2023/day06/src/: main.rs
2023/day07/src/: main.rs
2023/day08/: Cargo.toml
2023/day08/src/: main.rs
2023/day09/: Cargo.toml
2023/day09/src/: main.rs
2023/day1/: Cargo.toml
2023/day1/src/: main.rs
2023/day11/: Cargo.toml
2023/day11/src/: main.rs
2023/day12/: Cargo.toml
2023/day12/src/: .main.rs.swo
2023/day13/: Cargo.toml
2023/day13/src/: main.rs
2023/day16/src/: main.rs
2023/day2/: Cargo.toml
2023/day2/src/: main.rs
2023/src/: day02.rs  day03.rs  day06.rs  day10.rs  day11.rs  day12.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day22.rs  day23.rs  day24.rs  day25.rs
2023/src/aoc/: accessor.rs  input.rs  lib.rs  vecpp.rs
